--- a/main.html
+++ b/main.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
-<!--  this is a test  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
+    <!--  this is a test  -->
 
 </head>
 <body>
