--- a/main.html
+++ b/main.html
@@ -33,42 +33,50 @@
     <h2 class="mainh2 threeh2">Key Features</h2>
 	<div class="tileContainer"> 
 	    <div class="tile">
-	        <div class="descriptionContainer">
+	    <p class="tileText">Teacher Dashboard</p>
+	        <div class="descriptionContainer displayToggle">
 	            <span class="description">Teacher Dashboard</span>
 	        </div>
 	    </div>
 	    <div class="tile">
-            <div class="descriptionContainer">
+	    <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
         <div class="tile">
-            <div class="descriptionContainer">
+        <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
         <div class="tile">
-            <div class="descriptionContainer">
+        <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
         <div class="tile">
-            <div class="descriptionContainer">
+        <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
         <div class="tile">
-            <div class="descriptionContainer">
+        <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
         <div class="tile displayToggle">
-            <div class="descriptionContainer">
+        <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
         <div class="tile displayToggle">
-            <div class="descriptionContainer">
+        <p class="tileText">Teacher Dashboard</p>
+            <div class="descriptionContainer displayToggle">
                 <span class="description">Teacher Dashboard</span>
             </div>
         </div>
