Font and color changes, pre-Erin
Made minor edits to fonts and colors to make it more presentable.
Awaiting Erin's direction for official fonts and colors.

--- a/main.html
+++ b/main.html
@@ -118,6 +118,11 @@
 		        <textarea class="contactAreaHalf" name="text" id="message" placeholder="..."></textarea>
 	        </div>
 	     </form>
+	     <a href="#">
+		     <div class="button">
+		     SUBMIT
+		     </div>
+	     </a>
         
         
      </div>
