List are freaky
very, very freaky

--- a/main.html
+++ b/main.html
@@ -49,11 +49,16 @@
                 <li><label>Navigation</label></li>
                 <li><a href="https://is.byu.edu/o2/index.cfm?event=public.login&redirect=/o2/index.cfm?event=person.currentRegistrations">Login</a></li>
                 <li><a href="http://is.byu.edu/site/courses/index.cfm">Course Catalog</a></li>
+                <li><a href="http://is.byu.edu/site/courses/order.cfm">Request Catalog</a></li>
+                <!--  <li><a href="http://is.byu.edu/site/support/studentsprogress.cfm">Check Student Progress</a></li> -->
+                <li><a href="http://is.byu.edu/site/financial/rewards.cfm">Rewards Program</a></li>
+                <li><a href="http://is.byu.edu/site/programs/purchase/index.cfm">Purchase Orders</a></li>
+                <li><a href="http://is.byu.edu/site/contactus/counselor_support.cfm">Contact State Representative</a></li>
             </ul>
-            <ul class="off-canvas-list">
+           <!--  <ul class="off-canvas-list">
                 <li><label>Educators</label></li>
                 <!-- <li class="has-dropdown"><a href="page.html">Menu List 2</a> -->
-                    <ul class="off-canvas-list">
+                    <!-- <ul class="off-canvas-list">
                         <li><a href="http://is.byu.edu/site/support/studentsprogress.cfm">Check Student Progress</a></li>
                         <li><a href="http://is.byu.edu/site/courses/order.cfm">Request Catalog</a></li>
                         <li><a href="http://is.byu.edu/site/financial/rewards.cfm">Rewards Program</a></li>
@@ -62,10 +67,10 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="off-canvas-list">
-                <li><label>Students</label></li>
+            <ul class="off-canvas-list"> 
+                <li><label>Students</label></li> -->
                 <!-- <li class="has-dropdown"><a href="http://is.byu.edu">Menu List 1</a> -->
-                    <ul class="off-canvas-list">
+                    <!-- <ul class="off-canvas-list">
                         <li><a href="http://is.byu.edu/site/support/find-testing-center.cfm">Testing Centers</a></li>
 		                <li><a href="http://is.byu.edu/site/courses/ordertrans.cfm">Request Transcript</a></li>
                         <li><a href="http://is.byu.edu/site/financial/scholarship.cfm">Scholarships</a></li>
@@ -75,21 +80,22 @@
             </ul>
             
             <ul class="off-canvas-list">
-                <li><label>Parents</label></li>
+                <li><label>Parents</label></li> -->
                 <!-- <li class="has-dropdown"><a href="page.html">Menu List 2</a> -->
-                    <ul class="off-canvas-list">
+                    <!-- <ul class="off-canvas-list">
                         <li><a href="http://is.byu.edu/site/about/what-is.cfm">About Us</a></li>
                         <li><a href="http://is.byu.edu/site/programs/HighSchoolProgram.cfm">High School Programs</a></li>
                         <li><a href="http://is.byu.edu/site/courses/tuition.cfm">Tuition</a></li>
                     </ul>
                 </li>
-            </ul>
+            </ul> -->
+            
         </aside>
 <div class="maincontent">
 <div class="stripe one">
    <p class="test"> <div class="headtext">
-       <h1 class="headh1">Secondary Education Suite</h1>
-       <h2 class="headh2">Award-Winning Stuff</h2>
+       <h1 class="headh1">High School Suite</h1>
+       <h2 class="headh2">BYU Independent Study</h2>
    </div> </p>
 </div>
 <div class="stripe two">
@@ -101,16 +107,16 @@
         <div class="listContainer tile">
 	        <ul class="list ">
 	            <li>Affordable Quality Courses</li>
-	            <li>Award Winning Content</li>
+	            <li>Integrated Assessments</li>
 	            <li>Pace and Performance Analytics</li>
 	            <li>Free Student-Teacher Assistance</li>
-	            <li class="liToggle">Affordable Quality Courses</li>
+	            <li class="liToggle">Award-Winning Content</li>
 	        </ul>
 	        <ul class="list listHidden ">
-                <li>Affordable Quality Courses</li>
-                <li>Award Winning Content</li>
-                <li>Pace and Performance Analytics</li>
-                <li>Free Student-Teacher Assistance</li>
+                <li>Award-Winning Content</li>
+                <li>Free Technical Support</li>
+                <li>No Minimum Course Enrollments</li>
+                <li>Available Educational Support</li>
             </ul>
         </div>
    
