Content Added FIXES IN DESCRIPTION ^-^
NEED TO FIX:
-Page loading halfway down
-Make Contact form functional

--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
         <!-- OFF CANVAS MENU -->
         <aside class="left-off-canvas-menu">
             <ul class="off-canvas-list">
-                <li><label>Navigation</label></li>
+                
                 <li><a href="https://is.byu.edu/o2/index.cfm?event=public.login&redirect=/o2/index.cfm?event=person.currentRegistrations">Login</a></li>
                 <li><a href="http://is.byu.edu/site/courses/index.cfm">Course Catalog</a></li>
                 <li><a href="http://is.byu.edu/site/courses/order.cfm">Request Catalog</a></li>
@@ -109,8 +109,8 @@
 <div class="stripe one">
    <p class="test">
    	<div class="headtext">
-       <h1 class="headh1">High School Suite</h1>
-       <h2 class="headh2">BYU Independent Study</h2>
+       <h1 class="headh1">BYU High School Suite</h1>
+       <h2 class="headh2">Your teachers, our courses &nbsp</h2>
    	</div>
    </p>
 
@@ -144,32 +144,32 @@
 	<div class="tileContainer">
 	    <div class="floatTitle"><h2 class="threeh2" >Key Features</h2>
 	    </div><div class="tile firstTile">
-	       <h3>Teacher Dashboard</h3>
-	       <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+	       <h3>Flexible<br />Instruction</h3>
+           <p >Educators can respond to unique student needs through BYU High School Suite, which gives teachers the flexibility to scale instruction as large or small as necessary. </p>
         </div><div class="tile secondTile">
            <h3>Teacher <br /> Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+           <p >Provides instant snapshot summaries of student progress, enrollment information, student responsiveness, and other key performance metrics.  </p>
         </div><div class="tile thirdTile">
-           <h3>Teacher <br /> Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
-        </div><div class="tile">
-           <h3>Teacher <br /> Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+           <h3>Online <br /> Collaboration </h3>
+           <p >Initiates and facilitates enhanced student performance by using course wikis, journals, group emails, online discussions, and course announcements. </p>
         </div><div class="tileInvis1 tile">
-           <h3>Teacher Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+           <h3>Assessment <br />Results</h3>
+           <p >Produces a comprehensive summary of class and student assessment results.  This tool will flag issues pertaining to difficulty and potential discrimination.  </p>
         </div><div class="tileInvis1 tile">
-           <h3>Teacher Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+           <h3>Critical Student List</h3>
+           <p >Notifies teachers of students in danger of either falling behind or failing the course.  When used effectively, teachers can mitigate challenges early-on.</p>
+        </div><div class="tileInvis1 tile">
+           <h3>Learning Outcomes<br />Mastery</h3>
+           <p >Enables teachers to keep track of how well students internalize lessons by comparing class and student performance against selected standards.</p>
         </div><div class="tileInvis tile">
-          <h3>Teacher <br /> Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+          <h3>Personal Performance  <br />Metrics</h3>
+           <p >Allows teachers to focus on metrics specific to each student, including pacing and performance summaries.</p>
         </div><div class="tileInvis tile">
-           <h3>Teacher Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+           <h3>Dropbox Tool</h3>
+           <p >Students submit assignments online using DropBox, a proven feature used in the best virtual classrooms.</p>
         </div><div class="tileInvis tile">
-           <h3>Teacher <br /> Dashboard</h3>
-           <p >Lots and lots of tileText will go here. Russ will make all the tileText, just copy/paste when ready.</p>
+           <h3>To-Do List</h3>
+           <p >Increases teacher productivity by allowing the To-Do list to guide their workflow management.</p>
         </div>
 	</div>
 </div>
