--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
     <!--  this is a test  -->
-	<script src="js/vendor/jquery.js"></script>
+	<script src="js/vendor/jquery-2.1.1.min.js"></script>
 	<script src="js/foundation/foundation.js"></script>
 	<script src="js/foundation/foundation.offcanvas.js"></script>
 	<script type="text/javascript" src="//isdev.byu.edu/site/resources/lead_submit.js"></script>
 	<script type="text/javascript">
-		attachForm("#contactForm",".clickhere", function(e){
-			//$("#contactForm").replaceWith($('<div id="enterForm">Thank you! We\'ll contact you with the phone or email addres you provided if you win!<br/><h1>Enjoy the game!</h1></div>'));
+		attachForm("#contactForm",".clickhere", function( data, textStatus, jqXHR ){
+			console.log("ajax connection done.");
+			//	This is an example of a simple thing you could use to create a new element after your form. Placing a "placeholder" element provides you a natural way to move/place the response data where you want it. For flexibility of design, the way you've done it here is actually better. Therefore this is commented out.
+			//$("#contactForm").insertAfter($('<div id="form-response">' + data.message + '</div>'));
 			$("#form-submit").html('<img src="img/green-check-mark.png" class="form-success" />Thank you for your interest! We will contact you shortly with more information.').addClass("form-success");
-		});
+		}, false, false);	//	The last two parameters are optional and here are set to their default values. They govern an optional setting if you supply null for the handler function and rely on the default setting there, and the debug setting which needs to be true to include debug information in the console.
 	</script>
 	<script type="text/javascript">
-	(function($){
-		var debug = false;
-		$(document).foundation();
-	    $(document).ready(function () {
+	(function($){	//	We've wrappered this javascript to keep it contained.
+		var debug = false;	//	development variable. optional and could be deleted here without consequence to execution.
+		$(document).foundation();	//	Initialize the foundation framework.
+	    $(document).ready(function () {	//	Run the rest on document "ready" state change. (if document is somehow magically already in that state, this will fire immediately.)
+	    	//	Because this function is attached in multiple places, we define it as a variable so that it can exist once only in the code.
 			var closeMenuFunction = function() {
-				if($('.move-right').length > 0) {
+				if($('.move-right').length > 0) {	//	This forces the function to operate as only a "close".
 		        	$('.off-canvas-wrap').foundation('offcanvas', 'toggle', 'move-right');
 			        $('.maincontent').unbind("click.menumain");
 			        if(debug) console.log("The menu should be closed/closing. The click handler has been removed from the .maincontent element.");
@@ -225,7 +228,7 @@
 		    <div class="button1 clickhere">
 			    SUBMIT
 		    </div>
-		    <div id="form-submit"></div>
+		    <div id="form-submit"><!-- This is where the response from the form submission code will be placed after they submit. --></div>
 			<input type="hidden" id="form-id" name="form" value="High School Suite">
 			<input type="hidden" id="send_email_to_marketing-id" name="send-email-to-marketing" value="true">
 	     </form>
