removed DEV from script path (oops)
It should have been removed for publication sooner

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="js/vendor/jquery-2.1.1.min.js"></script>
 	<script src="js/foundation/foundation.js"></script>
 	<script src="js/foundation/foundation.offcanvas.js"></script>
-	<script type="text/javascript" src="//isdev.byu.edu/site/resources/lead_submit.js"></script>
+	<script type="text/javascript" src="//is.byu.edu/site/resources/lead_submit.js"></script>
 	<script type="text/javascript">
 		var debug = false;
 		attachForm("#contactForm",".clickhere", function( data, textStatus, jqXHR ){
@@ -66,28 +66,27 @@
 	 
 			<!-- OFF CANVAS MENU -->
 			<aside class="left-off-canvas-menu">
-					<ul class="off-canvas-list">
-							
-							<li><a href="https://is.byu.edu/o2/index.cfm?event=public.login&redirect=/o2/index.cfm?event=person.currentRegistrations">Login</a></li>
-							<li><a href="http://is.byu.edu/site/courses/index.cfm">Course Catalog</a></li>
-							<li><a href="http://is.byu.edu/site/courses/order.cfm">Request Catalog</a></li>
-							<!--	<li><a href="http://is.byu.edu/site/support/studentsprogress.cfm">Check Student Progress</a></li> -->
-							<li><a href="http://is.byu.edu/site/financial/rewards.cfm">Rewards Program</a></li>
-							<li><a href="http://is.byu.edu/site/programs/purchase/index.cfm">Purchase Orders</a></li>
-							<li><a href="http://is.byu.edu/site/contactus/counselor_support.cfm">Contact State Representative</a></li>
-					</ul>
+				<ul class="off-canvas-list">
+					<li><a href="https://is.byu.edu/o2/index.cfm?event=public.login&redirect=/o2/index.cfm?event=person.currentRegistrations">Login</a></li>
+					<li><a href="http://is.byu.edu/site/courses/index.cfm">Course Catalog</a></li>
+					<li><a href="http://is.byu.edu/site/courses/order.cfm">Request Catalog</a></li>
+					<!--	<li><a href="http://is.byu.edu/site/support/studentsprogress.cfm">Check Student Progress</a></li> -->
+					<li><a href="http://is.byu.edu/site/financial/rewards.cfm">Rewards Program</a></li>
+					<li><a href="http://is.byu.edu/site/programs/purchase/index.cfm">Purchase Orders</a></li>
+					<li><a href="http://is.byu.edu/site/contactus/counselor_support.cfm">Contact State Representative</a></li>
+				</ul>
 			</aside>
 			<!-- END OF: OFF CANVAS MENU -->
 			<!-- MAIN CONTENT DIV -->
 			<div class="maincontent">
 				<!-- STRIPE ONE -->
 				<div class="stripe one">
-					 <p class="test">
-					 	<div class="headtext">
-							 <h1 class="headh1">BYU High School Suite</h1>
-							 <h2 class="headh2">Your teachers, our courses &nbsp</h2>
-					 	</div>
-					 </p>
+					<p class="test">
+						<div class="headtext">
+							<h1 class="headh1">BYU High School Suite</h1>
+							<h2 class="headh2">Your teachers, our courses &nbsp</h2>
+						</div>
+					</p>
 				</div>
 				<!-- END OF: STRIPE ONE -->
 				<!-- STRIPE TWO -->
